--- a/Immune_pheno.ipynb
+++ b/Immune_pheno.ipynb
@@ -531,6 +531,36 @@
     "input_path = 'hxu_predictions-Jinhwan/'\n",
     "tils_density(input_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c2f8f68",
+   "metadata": {},
+   "source": [
+    "# Patient level label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf9ade8",
+   "metadata": {},
+   "source": [
+    "df=pd.read_csv(\"path_to_immune_score_file_all_patinets\")\n",
+    "df_ext=df_m[[\"MRN\",\"immune_infl\",\"immune_excl\",\"immune_des\"]]\n",
+    "df = pd.DataFrame(\n",
+    "   {\n",
+    "      \"MRN\": [],\n",
+    "      \"Immune_ph\": []\n",
+    "   }\n",
+    ")\n",
+    "for i,row in enumerate(df_ext.iterrows()):\n",
+    "    if row[1][\"immune_infl\"]>0.33:\n",
+    "        df.loc[i]=[row[1][\"MRN\"], \"immune_inflamed\"]\n",
+    "    elif row[1][\"immune_excl\"]>0.33:\n",
+    "        df.loc[i]=[row[1][\"MRN\"], \"immune_excluded\"]\n",
+    "    else:\n",
+    "        df.loc[i]=[row[1][\"MRN\"], \"immune_desert\"]"
+   ]
   }
  ],
  "metadata": {
